--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -6,6 +6,7 @@
   <tr>
     <th>Title    </th>
     <th>Content    </th>
+    <th>Deadline  </th>
     <th colspan="3"></th>
   </tr>
 
@@ -13,8 +14,13 @@
     <tr>
       <td> <%= todo.title%>  </td>
       <td> <%= todo.content%>  </td>
+      <td> <%= todo.ddl.strftime("%m/%d, %Y")%> </td>
       <td> <%= link_to '<button type="button">Show</button>'.html_safe, todo_path(todo) %> </td>
       <td> <%= link_to '<button type="button">Edit</button>'.html_safe, edit_todo_path(todo) %> </td>
+      <td> <%= link_to '<button type="button">Delete</button>'.html_safe, todo_path(todo),
+        method: :delete,
+        data: { confirm: 'sure?' }%> </td>
+      <td> &nbsp; &nbsp; <%= todo.ddl.strftime("%A")%> </td>
     </tr>
   <% end %>
 </table>
