--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -24,3 +24,7 @@
     </tr>
   <% end %>
 </table>
+
+<br><br>
+
+<h5>Author: <a href="https://github.com/k27dong">@k27dong</a> <br> Powered by Ruby on Rails</h6>
