--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,9 +32,11 @@
 
 <p>
 <%= form.label :password%> <br>
-<%= form.password_field :password_digest%>
+<%= form.password_field :password%>
 </p>
 
 <%= form.submit "Create Account"%>  &nbsp; | &nbsp;
-<%= link_to '<button type="button">Main Page</button>'.html_safe, controller: 'welcome'%>
+<%= link_to '<button type="button">Main Page</button>'.html_safe, controller: 'welcome'%> <br>
+
+<p>or you can:  <%= link_to 'Sign In', new_session_path%></p>
 <% end %>
