added sign in features

--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -27,6 +27,7 @@
 
 <br>
 <%= link_to '<button type="button">Main Page</button>'.html_safe, controller: 'welcome'%> &nbsp; | &nbsp;
+<%= link_to '<button type="button">Sign In</button>'.html_safe, new_session_path%> &nbsp; | &nbsp;
 <%= link_to '<button type="button">Sign Up</button>'.html_safe, signup_path%>
 
 <br><br>
