--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,8 @@
 <h4>Welcome</h4>
 
-<%= link_to 'Enter', controller: 'todo'%> <br>
+<%= link_to 'Enter', controller: 'todo'%> <br> <br>
+
+<%= link_to 'Sign in', new_session_path%> <br>
 
 <%= link_to 'Sign Up', signup_path%>
 
