Added user profile page

--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -41,5 +41,9 @@
 <% end %>
 
 <br><br>
+<%= link_to '<button type="button">Show All Users</button>'.html_safe, users_path%> </li>
+
+
+<br><br>
 
 <h5>Author: <a href="https://github.com/k27dong">@k27dong</a> <br> Powered by Ruby on Rails</h6>
